Update <meta/> and README.md

--- a/src/html/C001_ThisTimeISwear.html
+++ b/src/html/C001_ThisTimeISwear.html
@@ -3,6 +3,15 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta
+			name="description"
+			content="Article" />
+		<meta
+			name="keywords"
+			content="Palimpsest" />
+		<meta
+			name="author"
+			content="Chloe Yiu" />
+		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
 		<title>THIS TIME I SWEAR.</title>
