--- a/src/html/C001_ThisTimeISwear.html
+++ b/src/html/C001_ThisTimeISwear.html
@@ -37,6 +37,7 @@
 				writing captions or notes, or sourcing visual references. PPP is an
 				inspiration archive. 
 			</p>
+			<p>THIS TIME I SWEAR to commit.</p>
 		</div>
 	</body>
 </html>
