--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>PALIMPSEST</title>
 </head>
 <body>
-    <a href="sauce/C001/index.html">C001.html</a>
-    <a href="sauce/M001/index.html">M001.html</a>
+    <a href="sauce/C001">C001.html</a>
+    <a href="sauce/M001/">M001.html</a>
 
     <style>
         body{
